fix on firefox

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 }
 
 .hand_container {
-  height: 10vh;
+  height: 5vh;
   width: 100%;
 }
 
@@ -176,7 +176,7 @@
   }
 
   .hand_container {
-    height: 10vw;
+    height: 5vw;
     width: 100%;
   }
 
